--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 * {
-    background-image: url(paisaje2.jpg);
+    background-image: url(amanecer2.png);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
