--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 * {
-    background-image: url(mar.jpg);
+    background-image: url(obscuro.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -18,10 +18,10 @@ h1 {
 .salmo {
     text-align: center;
     font-size: 25px;
-    color:brown;
+    color:goldenrod;
 }
 .texto {
     text-align: center;
     font-size: 25px;
-    color:brown;  
+    color:goldenrod; 
 }
