--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 * {
-   background-color: #2b807b;
+   background-color:burlywood;
    margin: 0;
    padding: 0;
 }
@@ -13,27 +13,27 @@ body {
 
 h1 {
     font-size: 40px;
-    color:goldenrod;
+    
 }
 .bienvenida {
    
     font-size: 25px;
-    color:goldenrod;
+    
 }
 .salmo {
     font-size: 25px;
-    color:goldenrod;
+    
 }
 .texto {
     font-size: 25px;
-    color:goldenrod; 
+   
 }
 .imagen {
     height: 350px;
     width: 200px;
     float: right;
     margin-right: 30px;
-    margin-left: 20px;
+    margin-left: 50px;
     margin-bottom: 50px;
     border-radius: 20px;
     border: 5px solid white;
@@ -42,4 +42,6 @@ h1 {
     justify-content: center;
     text-align: center;
     margin: 150px auto;
+    color:blue;
 }
+
